# context-sieve

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: support-chunks.jsonl
src/context_sieve/: __init__.py  analyzer.py  cli.py  loaders.py  models.py  report.py  text.py
tests/: test_analyzer.py  test_cli.py  test_loaders.py  test_text.py
